feat: enable users to reset forgotten passwords
